@startuml
class Person{
- firstname : String
- lastname : String
+ getFirstname()
+ getLastname()
}

class Record{
- people : ArrayList
- recordCount : int
+ sortByAlpha()
+ getRecord()
+ getRecordCount()
+ printRecordToFile()
}

class App{
- fileName:String
}

class FileManager{
+findFile()
+readFile()
}

App o-- Record
Record *-- Person
App o-- FileManager
@enduml